iniciando o limite customizado

--- a/limitTxt.css
+++ b/limitTxt.css
@@ -1,4 +1,4 @@
-.lLess , .lMore{color : blue;cursor : pointer;}
-.lLess{ display : none;}
+.lLess , .lMore , .clLess , .clMore{color : blue;cursor : pointer;}
+.lLess , .clLess{ display : none;}
 .lMoreDots{color : #000}
 .limitedText{margin : 40px 0}
